--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.1",
     "conversor-numero-a-letras-es-ar": "^1.0.3",
+    "highcharts-vue": "^1.4.3",
     "json-as-xlsx": "^2.5.4",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
