--- a/back/.envBACK
+++ b/back/.envBACK
@@ -11,9 +11,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=back
+DB_DATABASE=imoprenta
 DB_USERNAME=root
 DB_PASSWORD=
+
+# DB_CONNECTION=mysql2
+# DB_HOST2=127.0.0.1
+# DB_PORT2=3306
+# DB_DATABASE2=imprenta
+# DB_USERNAME2=root
+# DB_PASSWORD2=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
