--- a/back/composer.json
+++ b/back/composer.json
@@ -10,8 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^5.10",
-        "owen-it/laravel-auditing": "3.0.2"
+        "owen-it/laravel-auditing": "^13.6",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
