--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.1",
     "conversor-numero-a-letras-es-ar": "^1.0.3",
+    "highcharts": "^11.2.0",
     "highcharts-vue": "^1.4.3",
     "jquery": "^3.7.1",
     "json-as-xlsx": "^2.5.4",
